# rover_arm_control

./: .gitignore  CMakeLists.txt
inc/: controller_params.h  l298n.h  lowpass_filters.h  manipulator_packets.h  sinusoidal_profile.h  stepper.h  trapezoidal_profile.h  usb_cdc.h
src/: CMakeLists.txt  controller_params.c  l298n.c  lowpass_filters.c  main.c  sinusoidal_profile.c  stepper.c  trapezoidal_profile.c  usb_cdc.c
